# json2csv

./: .drone.yml  json2csv.cabal  stack.yaml
exec/: json2csv.hs
fixtures/: sample.jl
src/: MainEntry.hs
src/Text/: Json2CSV.hs  Json2CSVFast.hs
src/Text/Json2CSV/: Reference.hs
test/Text/: Json2CSVSpec.hs
