name:                json2csv
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com
-- copyright:
category:            Text
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Text.Json2CSV, Text.Json2CSV.Reference, MainEntry, Text.Json2CSVFast
  ghc-options: -Wall
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7
                     , aeson >= 2.0.0.0
                     , bytestring
                     , cassava
                     , directory
                     , scientific
                     , streaming-cassava
                     , text
                     , unordered-containers
                     , vector
                     , temporary-resourcet
                     , resourcet
                     , streaming-bytestring
                     , streaming
                     , json-syntax
                     , byteslice
                     , text-short
                     , scientific-notation
                     , transformers-base
  default-language:    Haskell2010

executable json2csv
  main-is: json2csv.hs
  hs-source-dirs: exec
  ghc-options: -Wall -Werror -O2
  build-depends: base
               , json2csv

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs: test
  main-is:       Spec.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -O2  -j2
  other-modules: Text.Json2CSVSpec
  build-depends: base
               , base-prelude

               , aeson-qq
               , bytestring
               , cassava
               , deepseq
               , directory
               , hspec
               , json2csv
               , text
               , vector
               , streaming-bytestring
               , resourcet
               , json-syntax
               , byteslice
               , text-short
               , scientific-notation
               , transformers-base
               , streaming
               , unordered-containers
